--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,5 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["all"]
-} 
+  "regions": ["iad1"]
+}
