--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.16",
     "clsx": "^2.1.1",
+    "firebase": "^11.4.0",
     "framer-motion": "^11.0.3",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.330.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^3.0.2"
   },
